Fixed jump on textarea focus

--- a/src/index.css
+++ b/src/index.css
@@ -785,6 +785,10 @@ p {
   background-color: var(--cream);
 }
 
+.contact .form-control {
+  border: none;
+}
+
 .contact .form-control:focus {
   background-color: var(--light-cream);
   border: none;
